<resources>
    <string name="app_name">LifeLink</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_account">Register Yourself</string>
    <string name="join_lifelink_community">Join the LifeLink community to save lives.</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="blood_group">Blood Group</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already Registered?<b>Sign In</b></string>


    <string name="sign_in">Sign In</string>
    <string name="welcome_back_please_sign_in">Wellcome Back. Please Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="dont_have_account">don\u0027t have registered yet</string>
    <string name="by_continuing_you_agree">Terms \u0026 Conditions</string>
    <string name="or">OR</string>
    <string name="within_today">Within Today</string>
    <string name="choose_date">Choose Date</string>
    <string name="select_time_today">Select time (today)*</string>
    <string name="select_time">Select time</string>
    <string name="send_blood_request">Send Blood Request</string>
    <string name="select_date">Select Date *</string>
    <string name="tap_to_select_date">Tap to select date</string>
    <string name="select_blood_type">Select Blood Type *</string>
    <string name="center">Center *</string>
    <string name="choose_hospital">Choose Hospital</string>
    <string name="urgency">Urgency *</string>
    <string name="emergency">Emergency</string>
    <string name="other">Other</string>
    <string name="emergency_selected_send_request_immediately">Emergency selected — send request immediately.</string>
    <string name="other_choose_one">Other — choose one</string>
</resources>