<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.fragments.requesthelp.RequestHelpFragment">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/requestFromCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            android:padding="16dp"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_blood_type"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinnerBloodType"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="10dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/center"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"/>

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/etChooseHospital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_hospital"
                    android:inputType="text"
                    android:dropDownHeight="wrap_content"
                    android:dropDownWidth="match_parent"
                    android:completionThreshold="1"
                    android:padding="12dp"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/urgency"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"/>



                <RadioGroup
                    android:id="@+id/rgUrgency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="6dp"
                    >

                    <RadioButton
                        android:id="@+id/rbEmergency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emergency"
                        android:checked="true"
                        android:layout_weight="1"
                        />



                    <RadioButton
                        android:id="@+id/rbOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:checked="false"
                        android:layout_weight="1"
                        />
                </RadioGroup>

                <!-- Dynamic area: one of these sections will be visible at a time -->
                <LinearLayout
                    android:id="@+id/containerDynamic"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    >

                    <!-- Emergency: immediate send -->
                    <LinearLayout
                        android:id="@+id/layoutEmergency"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/emergency_selected_send_request_immediately"
                            android:padding="8dp" />

                        <Button
                            android:id="@+id/btnSendEmergency"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/send_blood_request"
                            android:textColor="@color/white"
                            android:backgroundTint="@color/app_theme_orange"
                            />
                    </LinearLayout>

                    <!-- Other: Within Today or Date Range -->
                    <LinearLayout
                        android:id="@+id/layoutOther"
                        android:orientation="vertical"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/other_choose_one"
                            android:padding="8dp"/>

                        <RadioGroup
                            android:id="@+id/rgOtherOptions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rbWithinToday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/within_today"
                                android:layout_weight="1"
                                />

                            <RadioButton
                                android:id="@+id/rbDateRange"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/choose_date"
                                android:layout_weight="1"
                                />
                        </RadioGroup>

                        <!-- Within Today: choose time -->
                        <LinearLayout
                            android:id="@+id/layoutWithinToday"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/selectTimeWithingTodayTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/select_time_today"/>



                            <TextView
                                android:id="@+id/withinTodaySelectTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:layout_marginTop="6dp"
                                android:text="@string/select_time"
                                android:background="?android:attr/selectableItemBackground"
                                android:clickable="true"/>

                            <TimePicker
                                android:id="@+id/timePickerOther"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:visibility="gone"/>


                            <Button
                                android:id="@+id/btnSendOtherToday"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/send_blood_request"
                                android:layout_marginTop="10dp"/>
                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/layoutDateRange"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/select_date"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/tvSelectedDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/tap_to_select_date"
                                android:padding="12dp"
                                android:layout_marginTop="8dp"
                                android:background="?android:attr/selectableItemBackground"
                                android:clickable="true"
                                android:focusable="true" />

                            <DatePicker
                                android:id="@+id/datePicker"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone"
                                android:calendarViewShown="false"
                                android:datePickerMode="spinner"/>

                            <Button
                                android:id="@+id/btnSendOtherRange"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/send_blood_request"
                                android:layout_marginTop="10dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/requestDetailCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            android:padding="12dp"
            android:layout_margin="20dp"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Active Blood Request"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_weight="2"
                        />

                    <TextView
                        android:id="@+id/requestStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pending"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/round_boarder"
                        />


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="12dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="Blood Type:"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvBloodType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="O+" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="Hospital:"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvHospitalName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="City Life Hospital" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="Urgency:"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvUrgency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        tools:text="Urgent"
                        tools:textColor="@android:color/holo_orange_dark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="Needed:"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvRequestDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Within 2 Hours" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnDeleteRequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Delete Request"
                    android:textColor="@color/white"
                    android:backgroundTint="@android:color/holo_red_dark"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>


</ScrollView>